[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asteroid.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Asteroid_01.png" type="Texture" id=2]
[ext_resource path="res://PixelMiners-KKal.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Sounds/Explode.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Incorrect.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=2]
radius = 13.895

[node name="Asteroid" type="Area2D" groups=[
"Asteroids",
]]
position = Vector2( 168.15, 93.0999 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -8.31555
margin_top = -5.99999
margin_right = 11.6844
margin_bottom = 8.00001
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.473328, 0.473343 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="IncorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="ExplosionSound" to="." method="_on_ExplosionSound_finished"]
[connection signal="finished" from="IncorrectSound" to="." method="_on_IncorrectSound_finished"]
